crates/comptime/husky-rust-transpilation/expect-files/examples/errors/syntax-errors/module_defn_rust_transpilation/src/lib.rs
#![allow(warnings, non_snake_case)]
use husky_core::*;
use ad_hoc_devsoul_dependency::{*, ugly::*};

pub mod ast;
pub mod uses;

pub use self::ast::*;
pub use self::uses::*;

